View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032918 | Open CASCADE | OCCT:Coding | public | 2022-04-07 10:37 | 2023-03-19 23:19 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2019 | ||
Product Version | 7.6.0 | ||||
Target Version | 7.7.0 | Fixed in Version | 7.6.3 | ||
Summary | 0032918: Coding Rules - suppress MSVS warnings from 3rdparty `rapidjson` on VS2019/C++20 | ||||
Description | Microsoft Visual Studio Professional 2019 Version 16.11.11 std=c++20 Disable warning messages, occures in rapidjson library. | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
child of | 0032887 | assigned | Open CASCADE | Coding - Problem of compilation on VS2019/C++20 |
|
Branch CR32918 has been created by ddzama. SHA-1: 77234fded64689c3bd20f4fd1cd434e302f44b55 Detailed log of new commits: Author: Dmitry DZAMA Date: Thu Mar 31 10:46:02 2022 +0300 0032918: Coding Rules - eliminate MSVS2019 warnings, occurs in 3rdparty `rapidjson` Microsoft Visual Studio Professional 2019 Version 16.11.11 std=c++20 Disable warning messages, occures in rapidjson library. |
|
Branch CR32918 has been updated forcibly by ddzama. SHA-1: b25f8011482f263f8918a58681d99c0b08957f87 |
|
Branch CR32918 has been updated forcibly by ddzama. SHA-1: d77bcef1cf8dbcf0fcdaee5751e2d6dc650656b2 |
|
Please raise the fix. |
|
Combination - OCCT branch : IR-2022-04-08 master SHA - 7021de2fe7a69d4c788ccf43b8b096dbcc8597c8 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-04-08 SHA - e16d959d441765c483049307ba7293173532103a was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18452.87000000039 / 18490.94000000032 [-0.21%] Products Total CPU difference: 11761.310000000152 / 11719.920000000124 [+0.35%] Windows-64-VC14: OCCT Total CPU difference: 20539.828125 / 20552.71875 [-0.06%] Products Total CPU difference: 13248.21875 / 13242.609375 [+0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32918 has been deleted by vglukhik. SHA-1: d77bcef1cf8dbcf0fcdaee5751e2d6dc650656b2 |
occt: master e455c54b 2022-03-31 10:46:02
Committer: |
0032918: Coding Rules - suppress MSVS warnings from 3rdparty `rapidjson` on VS2019/C++20 Microsoft Visual Studio Professional 2019 Version 16.11.11 std=c++20 Disable warning messages, occures in rapidjson library. |
Affected Issues 0032918 |
|
mod - src/RWGltf/RWGltf_GltfJsonParser.hxx | Diff File | ||
mod - src/RWGltf/RWGltf_GltfOStreamWriter.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-04-07 10:37 |
|
New Issue | |
2022-04-07 10:37 |
|
Assigned To | => ddzama |
2022-04-07 12:53 | kgv | Relationship added | child of 0032887 |
2022-04-07 12:54 | kgv | Product Version | 7.7.0 => 7.6.0 |
2022-04-07 12:54 | kgv | Summary | Coding Rules - eliminate MSVS2019 warnings, occurs in 3rdparty `rapidjson` => Coding Rules - suppress MSVS warnings from 3rdparty `rapidjson` on VS2019/C++20 |
2022-04-07 14:23 | git | Note Added: 0107684 | |
2022-04-07 14:41 | git | Note Added: 0107703 | |
2022-04-07 14:52 |
|
Relationship deleted | child of 0032887 |
2022-04-07 14:54 |
|
Relationship added | child of 0032887 |
2022-04-07 15:07 | git | Note Added: 0107711 | |
2022-04-08 18:22 | kgv | Assigned To | ddzama => bugmaster |
2022-04-08 18:22 | kgv | Status | new => resolved |
2022-04-08 18:22 | kgv | Note Added: 0107768 | |
2022-04-08 18:22 | kgv | Status | resolved => reviewed |
2022-04-09 09:50 |
|
Status | reviewed => tested |
2022-04-09 09:50 |
|
Note Added: 0107796 | |
2022-04-09 09:53 |
|
Test case number | => Not required |
2022-04-10 10:42 |
|
Changeset attached | => occt master e455c54b |
2022-04-10 10:42 |
|
Assigned To | bugmaster => ddzama |
2022-04-10 10:42 |
|
Status | tested => verified |
2022-04-10 10:42 |
|
Resolution | open => fixed |
2023-01-21 21:06 | git | Note Added: 0112949 | |
2023-03-19 23:19 | vglukhik | Status | verified => closed |
2023-03-19 23:19 | vglukhik | Fixed in Version | => 7.6.3 |