0032918: Coding Rules - suppress MSVS warnings from 3rdparty `rapidjson` on VS2019/C++20

Microsoft Visual Studio Professional 2019
Version 16.11.11
std=c++20

Disable warning messages, occures in rapidjson library.